# libvirt-rust-xml

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md
ci/: manifest.yml
ci/buildenv/: almalinux-9.sh  alpine-edge.sh  centos-stream-9.sh  debian-11.sh  debian-12.sh  fedora-39.sh  fedora-rawhide.sh  opensuse-leap-15.sh  opensuse-tumbleweed.sh
ci/containers/: almalinux-9.Dockerfile  alpine-319.Dockerfile  alpine-320.Dockerfile  alpine-edge.Dockerfile  centos-stream-9.Dockerfile  debian-11.Dockerfile  debian-12.Dockerfile  debian-sid.Dockerfile  fedora-39.Dockerfile  fedora-40.Dockerfile  fedora-rawhide.Dockerfile  opensuse-leap-15.Dockerfile  opensuse-tumbleweed.Dockerfile  ubuntu-2204.Dockerfile  ubuntu-2404.Dockerfile
ci/gitlab/: build-templates.yml  builds.yml  containers.yml
ci/lcitool/projects/: libvirt-rust-xml.yml
